gccida/c1/noce_operand_ok
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_operand_ok/src/ifcvt.c:2065:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = mode_class_0[v3]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_operand_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_operand_ok/src/ifcvt.c:2080:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( rtx)op[1] == const_tiny_rtx[0][v3] ) 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_operand_ok/src/ifcvt.c:2089:12: error: expected identifier or '('
 struct op = ( rtx)op[1]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_operand_ok/src/ifcvt.c:2094:2: error: expected expression
 struct op = op->fld[0].rtx; 
 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_operand_ok/src/obj/ifcvt.o] Error 1
